test/negative/before02.cfr
// Test for negative before constraint

a
 b ?
  c ?
  d ?
  [c before ]


